<resources>
    <string name="app_name">Buscaminas</string>
    <string name="text_username">Username</string>
    <string name="prompt_username">Enter your Username</string>
    <string name="text_null">Please, Enter a Username</string>
    <string name="text_exit_confirm">¿Are you sure to exit?</string>
    <string name="ModeTitle">Mode</string>
    <string name="ezMode">Easy</string>
    <string name="hardMode">Hard</string>
    <string name="ThemeTitle">Theme</string>
    <string name="SaveSetting">Save Settings </string>

    <string name="banderas">10</string>
    <string name="btnActivado">Activado</string>
    <string name="btnDesactivado">Desactivado</string>
    <string name="btnPuesto">Bandera</string>
    <string name="time">0</string>
    <string name="mine">mine</string>
    <string name="cell">cell</string>

    <string name="pos">#</string>
    <string name="score">Score</string>

    <string name="play_again">Play again</string>

</resources>